--- a/displaytabs/tabs/AccountingUI/AccountChartProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/AccountChartProfileMain.html
@@ -1,56 +1,29 @@
 <div style="display: flex; flex: 100%;">
-    <input rowIndex="0" type="hidden" class="form-control editAccountChart" module="AccountChartUI" name="AccountChartId">
-    <input rowIndex="0" type="hidden" class="form-control editAccountChart" module="AccountChartUI" name="code">
-    <div class="form-group" style="flex: 2; margin-left: 10px;">
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="AccountChartUI" name="AccountChartId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="AccountChartUI" name="code">
+    <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Account Name</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="accountName" tabName="_TABNAME_" disabled>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AccountChartUI"
+            name="accountName" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Account #</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="accountNumber" tabName="_TABNAME_" disabled>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AccountChartUI"
+            name="accountNumber" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Nature</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="accountNature" tabName="_TABNAME_" disabled>
+        <label>Account Nature</label>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AccountChartUI"
+            name="accountNature" tabName="_TABNAME_">
+    </div>
+    <div class="form-group" style="flex: 1; margin-left: 15px;">
+        <label>Account Type</label>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AccountChartUI"
+            name="accountType" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Type</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="accountType" tabName="_TABNAME_" disabled>
-    </div>
-    <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Sub Type</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="accountSubType" tabName="_TABNAME_" disabled>
-    </div>
-    <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Statement</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="financialStatement" tabName="_TABNAME_" disabled>
-    </div>
-    <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Normally</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="normally" tabName="_TABNAME_" disabled>
-    </div>
-</div>
-<div style="display: flex; flex: 100%;">
-    <div class="form-group" style="flex: 10; margin-left: 11px;">
         <label>Description</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="description" tabName="_TABNAME_" disabled>
-    </div>
-    <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Balance</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="balance" tabName="_TABNAME_" disabled>
-    </div>
-    <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Bank Balance</label>
-        <input type="text" rowIndex="0" class="form-control editAccountChart" module="AccountChartUI"
-            name="bankBalance" tabName="_TABNAME_" disabled>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AccountChartUI"
+            name="description" tabName="_TABNAME_">
     </div>
 </div>
