In Progress - Conference 360

--- a/home.html
+++ b/home.html
@@ -443,6 +443,7 @@
   <script src="js/modules/AccountingUI.js"></script>
   <script src="js/modules/ReferenceUI.js"></script>
   <script src="js/modules/ReportUI.js"></script>
+  <script src="js/modules/ConferenceUI.js"></script>
 
   <script src="js/events/global-events-others.js"></script>
   <script src="js/events/global-events-hr.js"></script>
