In Progress - Conference 360

--- a/home.html
+++ b/home.html
@@ -428,6 +428,7 @@
   <script src="js/modules/submodules/SupplierUI.js"></script>
   <script src="js/modules/submodules/TaxPeriodUI.js"></script>
   <script src="js/modules/submodules/UserUI.js"></script>
+  <script src="js/modules/submodules/ConferenceRoomUI.js"></script>
 
   <script src="js/main-initializer.js"></script>
 
