--- a/displaytabs/ConferenceUI-MainTemplate.html
+++ b/displaytabs/ConferenceUI-MainTemplate.html
@@ -22,6 +22,7 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Meeting Room</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+                                            <button type="button" class="btn btn-success btnJoinMeetingRoom" module="ConferenceRoomUI">Join Room</button>
                                             <button type="button" class="btn btn-success btnSaveRecord" module="ConferenceRoomUI">Save Meeting Room</button>
                                             <button type="button" class="btn btn-info btnNewRecord" module="ConferenceRoomUI">
                                                 <i class="fa fa-plus"></i> New Meeting Room</button>
