--- a/home.html
+++ b/home.html
@@ -379,6 +379,7 @@
   <script src="js/quick-searcher.js"></script>
   <script src="js/dynamiko-cache.js"></script>
 
+
   <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
   <script src="js/widgets/sales-chart-widget.js"></script>
@@ -389,6 +390,8 @@
   <script src="js/widgets/hrdocuments-widget.js"></script>
   <script src="js/widgets/mylinks-widget.js"></script>
   <script src="js/widgets/chat-widget.js"></script>
+
+  <script src="js/meetingroom/meetingRoom.js"></script>
 
   <script src="js/modules/AbstractUI.js"></script>
   <script src="js/modules/AbstractSubUI.js"></script>
