In Progress - Conference 360 Signaling

--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -2,6 +2,7 @@
     <div class="box-header">
         <h3 class="box-title">My Meeting Room</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+            <i class="fa fa-fw fa-phone btnCall" style="margin: 5px;"></i>
             <i class="glyphicon glyphicon-facetime-video btnShareVideo" style="margin: 5px;"></i>
             <i class="fa fa-fw fa-microphone btnShareAudio" style="margin: 5px;"></i>
             <i class="fa fa-fw fa-users btnInviteUser" style="margin: 5px;"></i>
