--- a/home.html
+++ b/home.html
@@ -392,6 +392,8 @@
   <script src="js/widgets/chat-widget.js"></script>
 
   <script src="js/meetingroom/meetingRoom.js"></script>
+  <script src="js/meetingroom/chatInitializer.js"></script>
+  <script src="js/meetingroom/p2p.js"></script>
 
   <script src="js/modules/AbstractUI.js"></script>
   <script src="js/modules/AbstractSubUI.js"></script>
