--- a/home.html
+++ b/home.html
@@ -378,6 +378,7 @@
   <script src="js/quick-updater.js"></script>
   <script src="js/quick-searcher.js"></script>
   <script src="js/dynamiko-cache.js"></script>
+  <script src="js/sockjs.js"></script>
 
 
   <script src="js/widgets/tasks-widget.js"></script>
