In Progress - Conference Room

--- a/displaytabs/tabs/ConferenceUI/ConferenceRoomProfileMain.html
+++ b/displaytabs/tabs/ConferenceUI/ConferenceRoomProfileMain.html
@@ -1,6 +1,8 @@
 <div style="display: flex; flex: 100%;">
     <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="ConferenceRoomUI" name="ConferenceRoomId">
     <input rowIndex="0" type="hidden" class="form-control editRecord" module="ConferenceRoomUI" name="code">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="ConferenceRoomUI" name="assignedConferenceCompany">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="ConferenceRoomUI" name="assignedConferenceRoom">
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Room Name</label>
         <input type="text" rowIndex="0" class="form-control editRecord" module="ConferenceRoomUI"
