--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -37,6 +37,7 @@
                 </div>
             </div>
         </div>
+        <div id="errorMsg"></div>
     </div>
 
     <div class="box-footer">
