--- a/home.html
+++ b/home.html
@@ -395,6 +395,7 @@
   <script src="js/meetingroom/meetingRoom.js"></script>
   <script src="js/meetingroom/chatInitializer.js"></script>
   <script src="js/meetingroom/p2p.js"></script>
+  <script src="js/meetingroom/roomSignal.js"></script>
 
   <script src="js/modules/AbstractUI.js"></script>
   <script src="js/modules/AbstractSubUI.js"></script>
