In Progress - Remote Video and Multi Peer completed - working on Chat Message.

--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -19,7 +19,7 @@
                     <i class="glyphicon glyphicon-record "></i>
                     <div>Record</div>
                 </div>
-                <div style="flex: 1; text-align: center; margin: 15px; margin-left: 30px;" class="hand btnSignOut">
+                <div style="flex: 1; text-align: center; margin: 15px; margin-left: 30px;" class="hand btnMeetingSignOut">
                     <i class="fa fa-fw fa-sign-out "></i>
                     <div>Sign&nbsp;Out</div>
                 </div>
